# chatgptcodexclone

./: README.md  pyproject.toml  run_backend.bat  run_backend.sh  run_codex_clone.bat  run_codex_clone.sh
codex_clone/: __init__.py  api.py  backend.py  repl.py
tests/: test_api.py  test_backend_paths.py  test_config.py
