[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-clone"
version = "0.1.0"
description = "Tiny local ChatGPT/Codex-style coding assistant CLI"
authors = [{ name = "Local User" }]
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["codex_clone"]
