[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-clone"
version = "0.3.0"
description = "Tiny local ChatGPT/Codex-style coding assistant CLI + smart backend"
authors = [{ name = "Local User" }]
requires-python = ">=3.10"
dependencies = [
    "huggingface_hub>=0.25.0",
]

[tool.setuptools.packages.find]
where = ["codex_clone"]
